[package]
name = "trace-macro"
version = "0.8.0"
authors = ["Douman <custparasite@gmx.se>"]
description = "Simple trace macros"
repository = "https://github.com/DoumanAsh/trace-macro"
documentation = "http://doumanash.github.io/trace-macro"
license = "MIT"

[lib]
name = "trace_macros"
path = "src/lib.rs"
test = false
